--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,5 +15,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: make
       run: make
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
     - name: test
-      run: ./test.sh
+      run:  ./test.sh
